--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     font-family: 'Nunito Sans', sans-serif;
     color: teal;
+    background-color: rgb(51,44,43);
     }
 
 img {
@@ -15,11 +16,11 @@ img {
 
 /*********** FORMATTING ************/
 
-
+/*********** HEADERS ************/
 
 header {
     font-family: 'Nunito Sans', sans-serif;
-    background-color: teal;
+    background-color: rgb(255,255,255);
     color: white;
     padding: 10px;
     text-align: center;
@@ -38,15 +39,15 @@ h1 {
 
 h2 {
     font-family: 'Nunito Sans', sans-serif;
-    color: grey;
-    width: 900px; margin: 20px; padding: 20px;
+    color: white;
+    width: 1000px; margin: 20px; padding: 20px;
     font-size: 30px;
     text-align: center;
     }
 
 h3 {  /*********** The smae as h2, only left alighed. I tried to utilize h2 by writing align="center" in the html file, but it didn't work ************/
     font-family: 'Nunito Sans', sans-serif;
-    color: black;
+    color: white;
     width: 400px; margin: 20px; padding: 20px;
     font-size: 30px;
     text-align: left;
@@ -54,19 +55,32 @@ h3 {  /*********** The smae as h2, only left alighed. I tried to utilize h2 by w
 
 h4 {  /*********** The smae as h2, only left alighed. I tried to utilize h2 by writing align="center" in the html file, but it didn't work ************/
     font-family: 'Nunito Sans', sans-serif;
-    color: black;
-    width: 400px; margin: 20px; padding: 20px;
+    color: grey;
+    width: 1000px; margin: 20px; padding: 20px;
     font-size: 20px;
     text-align: left;
     }
 
-h5 {
+h5 {  /*********** The smae as h3, only the text is Black ************/
     font-family: 'Nunito Sans', sans-serif;
-    color: grey;
+    color: black;
     width: 400px; margin: 20px; padding: 20px;
-    font-size: 72px;
+    font-size: 30px;
     text-align: left;
     }
+
+
+h6 {/***********DOG ACCESSORY Blocks***********/
+    font-family: 'Nunito Sans', bold;
+    color: black;
+    width: 260px; margin: 10px; padding: 10px;
+    font-size: 22px;
+    text-align: left;
+    }
+
+
+
+/*********** Paragraphing ************/
 
 p {
     font-family: 'Nunito Sans', sans-serif;
@@ -91,9 +105,9 @@ p {
     font-size: 0;
     text-align: left;
     }
-.grid-item, .grid-item-large {
+.grid-item, .grid-item-large, .grid-item-small {
     width: 550px;
-    height: 350px;
+    height: 400px;
     display: inline-block;
     margin: 4px;
     font-size: 1rem;
@@ -103,6 +117,21 @@ p {
 .grid-item-large {
     height: 1100px;
     }
+
+.grid-item-small {
+    width: 300px;
+    height: 250px;
+    }
+
+  .grid-box {
+    width: 200px;
+    height: 200px;
+    display: inline-block;
+    margin: 4px;
+    font-size: 1rem;
+    vertical-align: top;
+  }
+
 
 .orderButton {
     width: 445px;
@@ -118,34 +147,19 @@ p {
 /*********** CSS GRID - INLINE BLOCK - HOME ************/
 
 .dog {
-    background-color: darkgreen;
+    background-color: white;
     }
 .cat {
-    background-color: tomato;
+    background-color: white;
     }
 
 /*********** CSS GRID - INLINE BLOCK - DOG ************/
 
-.harness {
-    background-color: blue;
-    }
-.storage {
-    background-color: orange;
-    }
-.collar {
-    background-color: pink;
+.accessories {
+    background-color: gold;
     }
 
 /*********** CSS GRID - INLINE BLOCK - PRODUCT ************/
-
-h6 {        /*********** text for sizes ************/
-    font-family: 'Nunito Sans', sans-serif;
-    color: grey;
-    width: 180px; margin: 5px; padding: 5px;
-    font-size: 16px;
-    text-align: center;
-    text-align: middle;
-    }
 
 .productPic {
     background-color: tomato;
@@ -161,7 +175,7 @@ h6 {        /*********** text for sizes ************/
 
 .price-sales {
     font-family: 'Nunito Sans', bold;
-    color: grey;
+    color: white;
     width: 100px;
     margin: 20px;
     margin-top: 0px;
@@ -178,6 +192,19 @@ h6 {        /*********** text for sizes ************/
     color: grey;
     margin: 20px;
     margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 20px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    font-size: 16px;
+    text-align: left;
+    }
+
+.price-more {
+    font-family: 'Nunito Sans', bold;
+    color: black;
+    margin: 20px;
+    margin-top: 0px;
     margin-bottom: 1px;
     padding: 20px;
     padding-top: 0px;
@@ -186,4 +213,11 @@ h6 {        /*********** text for sizes ************/
     text-align: left;
     }
 
+
+.floating {
+    background-color: rgb(81,81,81);
+    }
+.tags {
+    background-color: gold;
+    }
 
